@@ -26,6 +26,7 @@ picker-autodeconstruct-target=Mark mining targets
 picker-train-honk=Automatic train honking
 picker-train-honk-type=Honk type
 picker-simple-blueprint=Quick Blueprint Entity
+picker-train-honk-attract=Attract Enemies on Honk
 
 [mod-setting-description]
 picker-item-zapper=Space seperated list of item names that will be zapped into the nether when dropping them with __CONTROL__drop-cursor__ key.
@@ -55,3 +56,4 @@ picker-autodeconstruct-target=Mark mining targets for deconstruction when drills
 picker-train-honk=Automatically honk train horns on certain conditions.
 picker-train-honk-type=Choose from deltic or normal honk types.
 picker-simple-blueprint=Create a quick blueprint of an entity with __CONTROL__picker-make-ghost.
+picker-train-honk-attract=Attract enemies when honking.
