@@ -6,8 +6,8 @@
     Adds toggle train mode hotkey
     Adds automatic train mode toggling
 ]]
-local Event = require("stdlib/event/event")
-local Player = require("stdlib/event/player")
+local Event = require('stdlib/event/event')
+local Player = require('stdlib/event/player')
 
 --[[
 	"name": "DelticHonk",
@@ -19,6 +19,14 @@ local Player = require("stdlib/event/player")
         Trains honk when stopping. And starting. And on command.
     ]]
 --]
+
+local function attract_enemies(entity, range)
+    if settings.global['picker-train-honk-attract'].value then
+        for _, enemy in pairs(entity.surface.find_enemy_units(entity.position, range)) do
+            enemy.set_command({type = defines.command.attack, target = entity, distraction = defines.distraction.by_damage})
+        end
+    end
+end
 
 local HONK_COOLDOWN = 120
 
@@ -49,14 +57,14 @@ end
 -- then set to manual mode.
 local function on_player_driving_changed_state(event)
     local player = game.players[event.player_index]
-    if player.vehicle and player.vehicle.train and player.mod_settings["picker-auto-manual-train"].value then
+    if player.vehicle and player.vehicle.train and player.mod_settings['picker-auto-manual-train'].value then
         local train = player.vehicle.train
         --Set train to manual
         if #train.passengers == 1 and available_train(train) then
             player.vehicle.train.manual_mode = true
             player.vehicle.surface.create_entity {
-                name = "flying-text",
-                text = {"vehicles.manual-mode"},
+                name = 'flying-text',
+                text = {'vehicles.manual-mode'},
                 position = player.vehicle.position,
                 color = defines.color.green
             }
@@ -68,24 +76,24 @@ Event.register(defines.events.on_player_driving_changed_state, on_player_driving
 -- Hotkey for toggling a train between automatic and manual.
 local function toggle_train_control(event)
     local player = game.players[event.player_index]
-    if player.vehicle and player.vehicle.train and not (player.selected and player.selected.type == "train-stop") then
+    if player.vehicle and player.vehicle.train and not (player.selected and player.selected.type == 'train-stop') then
         player.vehicle.train.manual_mode = not player.vehicle.train.manual_mode
-        local text = player.vehicle.train.manual_mode and {"vehicles.manual-mode"} or {"vehicles.automatic-mode"}
+        local text = player.vehicle.train.manual_mode and {'vehicles.manual-mode'} or {'vehicles.automatic-mode'}
         player.vehicle.surface.create_entity {
-            name = "flying-text",
+            name = 'flying-text',
             text = text,
             position = player.vehicle.position,
             color = defines.color.green
         }
     end
 end
-Event.register("picker-toggle-train-control", toggle_train_control)
+Event.register('picker-toggle-train-control', toggle_train_control)
 
 -- Force the train to go to the next station.
 local function goto_next_station(event)
     local player = game.players[event.player_index]
     local train = player.vehicle and player.vehicle.train
-    if train and not (player.selected and player.selected.type == "train-stop") then
+    if train and not (player.selected and player.selected.type == 'train-stop') then
         local schedule = train.schedule
         local stops = #schedule.records
         if stops > 0 then
@@ -97,21 +105,21 @@ local function goto_next_station(event)
             train.schedule = schedule
             train.manual_mode = false
             player.vehicle.surface.create_entity {
-                name = "flying-text",
-                text = "Next station",
+                name = 'flying-text',
+                text = 'Next station',
                 position = player.vehicle.position,
                 color = defines.color.green
             }
         end
     end
 end
-Event.register("picker-goto-next-station", goto_next_station)
+Event.register('picker-goto-next-station', goto_next_station)
 
 -- Hotkey while selecting a station will tell the train to go to that station if
 -- the train has 1 or fewer stations.
 local function goto_station(event)
     local player = game.players[event.player_index]
-    if player.selected and player.selected.type == "train-stop" then
+    if player.selected and player.selected.type == 'train-stop' then
         local train = player.vehicle and player.vehicle.train
         local stop = player.selected
         if train and (train.schedule and #train.schedule.records or 0) <= 1 then
@@ -125,32 +133,25 @@ local function goto_station(event)
         end
     end
 end
-Event.register("picker-goto-station", goto_station)
+Event.register('picker-goto-station', goto_station)
 
 -- Create a custom alert to help find the last car you were in.
 local function wheres_my_car(event)
     local player, pdata = Player.get(event.player_index)
-    if not event.input and player.vehicle and player.vehicle.type == "car" then
+    if not event.input and player.vehicle and player.vehicle.type == 'car' then
         pdata.last_car = player.vehicle
-    elseif player.selected and player.selected.type == "car" then
+    elseif player.selected and player.selected.type == 'car' then
         pdata.last_car = player.selected
     elseif event.input_name and pdata.last_car and pdata.last_car.valid then
-        player.add_custom_alert(
-            pdata.last_car,
-            {type = "item", name = pdata.last_car.name},
-            {"vehicles.dude-wheres-my-car"},
-            true
-        )
+        player.add_custom_alert(pdata.last_car, {type = 'item', name = pdata.last_car.name}, {'vehicles.dude-wheres-my-car'}, true)
     end
 end
-Event.register({"picker-dude-wheres-my-car", defines.events.on_player_driving_changed_state}, wheres_my_car)
+Event.register({'picker-dude-wheres-my-car', defines.events.on_player_driving_changed_state}, wheres_my_car)
 
 -- Trains honk when in automatic mode when starting or stopping.
 local function attempt_honk(event)
-    if honk_states[event.train.state] and settings.global["picker-train-honk"].value then
-        local honk =
-            settings.global["picker-train-honk-type"].value ..
-            (event.name == defines.train_state.on_the_path and "-start" or "-stop")
+    if honk_states[event.train.state] and settings.global['picker-train-honk'].value then
+        local honk = settings.global['picker-train-honk-type'].value .. (event.name == defines.train_state.on_the_path and '-start' or '-stop')
         local entity
         if (global.recently_honked[event.train.id] or event.tick) <= event.tick then
             if event.train.speed >= 0 and #event.train.locomotives.front_movers > 0 then
@@ -160,11 +161,12 @@ local function attempt_honk(event)
             end
             global.recently_honked[event.train.id] = event.tick + HONK_COOLDOWN
             if entity then
-                return entity.surface.play_sound {
+                entity.surface.play_sound {
                     path = honk,
                     position = entity.position,
                     volume = 1
                 }
+                attract_enemies(entity, 75)
             end
         end
     end
@@ -174,45 +176,46 @@ Event.register(defines.events.on_train_changed_state, attempt_honk)
 -- Hotkey for manually honking a vehicle train.
 local function manual_honk(event)
     local player = game.players[event.player_index]
-    if player.vehicle then
-        if player.vehicle.type == "locomotive" then
-            local sound = settings.global["picker-train-honk-type"].value
-            if player.vehicle.train.manual_mode then
-                local train = player.vehicle.train
-                local loco = player.vehicle
+    local vehicle = player.vehicle
+    if vehicle then
+        if vehicle.type == 'locomotive' then
+            local sound = settings.global['picker-train-honk-type'].value
+            if vehicle.train.manual_mode then
+                local train = vehicle.train
                 if train.speed == 0 then
-                    loco.surface.play_sound {
-                        path = sound .. "-start",
-                        position = loco.position,
+                    vehicle.surface.play_sound {
+                        path = sound .. '-start',
+                        position = vehicle.position,
                         volume = 1
                     }
                 else
-                    loco.surface.play_sound {
-                        path = sound .. "-stop",
-                        position = loco.position,
+                    vehicle.surface.play_sound {
+                        path = sound .. '-stop',
+                        position = vehicle.position,
                         volume = 1
                     }
                 end
+                attract_enemies(vehicle, 75)
             end
         else
-            local veh = player.vehicle
-            if veh.name:find("tank") then
-                veh.surface.play_sound {
-                    path = "train-stop",
-                    position = veh.position,
+            if vehicle.name:find('tank') then
+                vehicle.surface.play_sound {
+                    path = 'train-stop',
+                    position = vehicle.position,
                     volume = 1
                 }
             else
-                veh.surface.play_sound {
-                    path = "car-horn",
-                    position = veh.position,
+                vehicle.surface.play_sound {
+                    path = 'car-horn',
+                    position = vehicle.position,
                     volume = 1
                 }
             end
+            attract_enemies(vehicle, 50)
         end
     end
 end
-Event.register("picker-honk", manual_honk)
+Event.register('picker-honk', manual_honk)
 
 --[[
   "name": "VehicleSnap",
@@ -227,10 +230,7 @@ local SNAP_AMOUNT = 16
 
 local function snap_vehicle(event)
     local player, pdata = Player.get(event.player_index)
-    if
-        player and player.vehicle and player.vehicle.type == "car" and not player.vehicle.train and
-            player.vehicle.speed > 0.1
-     then
+    if player and player.vehicle and player.vehicle.type == 'car' and not player.vehicle.train and player.vehicle.speed > 0.1 then
         local o = player.vehicle.orientation
         local last_o = pdata._last_orientation
         if last_o and pdata.snap ~= false and math.abs(o - last_o) < 0.001 then
@@ -247,9 +247,9 @@ Event.register(defines.events.on_player_changed_position, snap_vehicle)
 local function toggle_snap(command)
     local player, pdata = Player.get(command.player_index)
     pdata.snap = not pdata.snap
-    player.print({"", tostring(pdata.snap)})
+    player.print({'', tostring(pdata.snap)})
 end
-commands.add_command("snap", "snapdriving", toggle_snap)
+commands.add_command('snap', 'snapdriving', toggle_snap)
 
 -- INIT -----------------------------------------------------------------------
 local function init_and_config()
